--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost/comidasPeruanas2?useSSL=false&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://localhost/bd?useSSL=false&serverTimezone=UTC
 spring.datasource.username= root
 spring.datasource.password=
 
